    * [HIVE-10610] - hive command fails to get hadoop version
    * [HIVE-10612] - HIVE-10578 broke TestSQLStdHiveAccessControllerHS2 tests
    * [HIVE-10614] - schemaTool upgrade from 0.14.0 to 1.3.0 causes failure
    * [HIVE-10638] - HIVE-9736 introduces issues with Hadoop23Shims.checkFileAccess
    * [HIVE-10715] - RAT failures - many files do not have ASF licenses


** Improvement
    * [HIVE-1575] - get_json_object does not support JSON array at the root level
    * [HIVE-2573] - Create per-session function registry
    * [HIVE-3185] - allow union set operation without ALL keyword (align to ISO-SQL 2011 specification)
    * [HIVE-5472] - support a simple scalar which returns the current timestamp
    * [HIVE-7175] - Provide password file option to beeline
    * [HIVE-8385] - UNION Operator in Hive
    * [HIVE-9138] - Add some explain to PTF operator
    * [HIVE-9143] - select user(), current_user()
    * [HIVE-9298] - Support reading alternate timestamp formats
    * [HIVE-9470] - Use a generic writable object to run ColumnaStorageBench write/read tests
    * [HIVE-9480] - Build UDF TRUNC to implement FIRST_DAY as compared with LAST_DAY
    * [HIVE-9500] - Support nested structs over 24 levels.
    * [HIVE-9518] - Implement MONTHS_BETWEEN aligned with Oracle one
    * [HIVE-9521] - Drop support for Java6
    * [HIVE-9556] - create UDF to calculate the Levenshtein distance between two strings
    * [HIVE-9564] - Extend HIVE-9298 for JsonSerDe
    * [HIVE-9590] - add qtests for ADD_MONTHS UDF
    * [HIVE-9594] - Add qtests for LAST_DAY udf
    * [HIVE-9596] - move standard getDisplayString impl to GenericUDF
    * [HIVE-9607] - Remove unnecessary attach-jdbc-driver execution from package/pom.xml
    * [HIVE-9618] - Deduplicate RS keys for ptf/windowing
    * [HIVE-9664] - Hive "add jar" command should be able to download and add jars from a repository
    * [HIVE-9673] - Set operationhandle in ATS entities for lookups